// TODO : MOVE THIS TO THE RIGHT LOCATION.
//
syntax = "proto3";

package istio.mixer.v1.config.template;
import "google/protobuf/descriptor.proto";

enum TemplateVariety {
TEMPLATE_VARIETY_UNSPECIFIED = 0;
TEMPLATE_VARIETY_CHECK = 1;
TEMPLATE_VARIETY_REPORT = 2;
}

extend google.protobuf.FileOptions {
TemplateVariety template_variety = 72295727;
}


extend google.protobuf.FileOptions {
string template_name = 72295729;
}

message Expr {
// NO fields. this is just a kind that we want to know in the tempaltes.
// Don't want to use annotations, since we cannot apply annotations within things like
// value type in a map. Withi this we can
}
